# Set-Relation-Properties

./: .gitignore  CMakeLists.txt  README.md  test.sh
.cache/clangd/index/: main.cpp.DB6370FA4DBE2E87.idx
include/: Set.h
src/: Set.cpp  main.cpp
